# bee-mail

./: .env  Cargo.toml  LICENSE  README.md
src/: login.rs  main.rs
src/login/: auth.rs
